--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,10 @@
       {
         "format": "compressed",
         "extensionName": ".min.css",
-        "savePath": "/css"
+        "savePath": "/dist/css"
       }
     ],
     "liveSassCompile.settings.excludeList": ["**/node_modules/**", ".vscode/**"],
     "liveSassCompile.settings.generateMap": true,
     "liveSassCompile.settings.autoprefix": ["> 1%", "last 2 versions"]
+  }
